# valorant-unofficial-openapi-client-python

./: .gitignore  README.md  generate.sh  pyproject.toml
.github/workflows/: generate-client.yml
henrik_dev_api_client/: __init__.py
henrik_dev_api_client/api/valorant/: crosshair.py  esports_schedules_v1.py  get_account_by_id_v1.py  get_account_by_id_v2.py  get_account_v1.py  get_account_v2.py  get_content_v1.py  get_matches_v3_by_id.py  get_matches_v3_by_name.py  get_matches_v4_by_id.py  get_matches_v4_by_name.py  get_mmr_history_by_id.py  leaderboard_v1.py  (+33 more)
henrik_dev_api_client/models/: __init__.py  account_v1_data.py  account_v1_data_card.py  account_v1_response.py  account_v2_data.py  account_v2_response.py  agent_id_name_combo.py  api_error.py  bundle.py  bundle_item.py  content_item.py  content_item_localized_names_type_0.py  content_v1.py  content_v1_response.py  esports_v1_data.py  esports_v1_data_league.py  esports_v1_data_match.py  esports_v1_data_match_game_type.py  esports_v1_data_match_teams.py  esports_v1_data_match_teams_record.py  esports_v1_data_tournament.py  esports_v1_response.py  featured_bundle.py  item.py  leaderboard_pvp_player.py  leaderboard_v2_response.py  leaderboard_v3_data.py  leaderboard_v3_data_player.py  leaderboard_v3_data_threshold.py  leaderboard_v3_data_threshold_tier.py  leaderboard_v3_response.py  map_id_name_combo.py  match_mode.py  matches_v2_data.py  matches_v2_data_coach.py  matches_v2_data_kill.py  matches_v2_data_metadata.py  matches_v2_data_metadata_premier_info.py  matches_v2_data_observer.py  matches_v2_data_platform.py  (+156 more)
